--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
     </section>
     <section class="input-form" id="input-form">
-        <form action="#">
+        <form action="#" onsubmit="submitF(event, this)">
             <label for="first-name">CARDHOLDER NAME</label>
-            <input type="text" placeholder="e.g Jane Appleseed" id="first-name">
-            <div id="error-text">Wrong format, characters only</div>
+            <input type="text" placeholder="e.g Jane Appleseed" id="name">
+            <div id="error-name">Can’t be blank</div>
             <label for="card-number">CARD NUMBER</label>
-            <input type="number" name="number" id="card-number" placeholder="e.g 1234 5678 9123 0000" maxlength="16">
+            <input type="text" name="number" id="number" placeholder="e.g 1234 5678 9123 0000" maxlength="19">
             <div id="error-number">Wrong format, numbers only</div>
             <div class="mm-yy-cvc-labels">
                 <label for="exp-date">EXP. DATE (MM/YY)</label>
@@ -45,21 +45,21 @@
             </div>
 
             <div class="mm-yy-cvc">
-                <input type="number" name="month" id="exp-date" placeholder="MM" maxlength="2" min="1" max="12">
-                <input type="number" name="year" id="exp-date" placeholder="YY" maxlength="4" min="2023" max="2050">
+                <input type="number" name="month" class="exp-date" placeholder="MM" maxlength="2" min="01" max="12">
+                <input type="number" name="year" class="exp-date" placeholder="YY" maxlength="4" min="23" max="50">
 
-                <input type="number" name="cvc" id="cvc" placeholder="e.g. 123" maxlength="3">
+                <input type="number" name="cvc" id="cvc-num" placeholder="e.g. 123" maxlength="3">
             </div>
             <div id="error-exp">Can’t be blank</div>
             <div id="error-cvc">Can’t be blank</div>
-            <input type="button" value="Confirm" class="btn" id="btn">
+            <button type="submit" value="Confirm" class="btn" id="btn">Confirm</button>
         </form>
     </section>
     <section id="complete-state">
         <div class="icon-complete"></div>
         <h1>THANK YOU!</h1>
         <p>We've added your card details</p>
-        <button class="btn-continue">Continue</button>
+        <button class="btn-continue" id="btn-continue">Continue</button>
     </section>
 
 
